objects/vlocity_ins__ManualQueue__c.object
<CustomObject>
    <description>Manual Queue</description>
    <fields>
        <fullName>vlocity_ins__DisplayedFields__c</fullName>
        <label>Displayed Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NotificationEmailId__c</fullName>
        <label>Notification Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QueueType__c</fullName>
        <label>Queue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Priority Queue</fullName>
                    <default>true</default>
                    <label>Priority Queue</label>
                </value>
                <value>
                    <fullName>Round Robin</fullName>
                </value>
                <value>
                    <fullName>Least Loaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Manual Queue</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Manual Queue</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manual Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>